Fix alignment issue

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -40,6 +40,7 @@ body {
   position: relative;
   margin-top: 50px;
   display: inline-block;
+  text-align: left;
 }
 
 
